# llm-qa-test

./: .gitignore  README.md  pyproject.toml
doc/: test_report.md  test_results.json
project/chatbot/: embeddings.py  llm.py
project/tests/: config.py  conftest.py  models.py  test_llm_chatbot.py
project/tests/data/: knowledge_base.py
project/tests/utils/: logger.py  qa_testharness.py  retrival_helper.py  score_calculator.py
